--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,5 +3,5 @@
     flex-direction: row;
     width: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
