--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,6 +3,6 @@
     flex-direction: row;
     width: 100%;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
 }
